--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,54 +1,24 @@
-
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-    <span>My First App</span>
-        <span class="example-fill-remaining-space"></span>
-        <span class="align-center"></span>
-        <span class="example-spacer"></span>
-        <button mat-button>About</button>
-        <button mat-button>Contact</button>
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
-      </button>
-    </mat-menu>
-     </mat-toolbar-row>
-
-     <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>Login</mat-card-title>
+<div fxLayout="row wrap" fxLayoutAlign="center center">
+    <mat-card fxFlex="100" >
+        <mat-card-header fxLayoutAlign="center center" >
+            <mat-card-title>
+                <h3 style="color: rgb(22, 3, 189)">Login</h3>
+            </mat-card-title>
         </mat-card-header>
-        <mat-card-content>
-          <form class="example-form">
-            <table class="example-full-width" cellspacing="0">
-              <tr>
-                <td>
-                  <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-                  </mat-form-field>
-                </td>
-              </tr>
-              <tr>
-              <td><mat-form-field class="example-full-width">
-                <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-              </mat-form-field></td>
-            </tr></table>
-          </form>
-          <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-raised-button (click)="login()" color="primary">Login</button>
+        <mat-card-content fxLayout="column">
+                <mat-form-field>
+                    <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+                </mat-form-field>
+                <mat-form-field>
+                    <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password"
+                        required>
+                </mat-form-field>
+
+            <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+      
+        <mat-card-actions style="max-width: 40%;" fxLayout="column" fxLayoutAlign="center center">
+            <button  mat-raised-button color="primary" (click)="login()">Continue <mat-icon>arrow_forward</mat-icon></button>
         </mat-card-actions>
-      </mat-card>
+    </mat-card-content>
+    </mat-card>
+</div>
