[feature-initial]dashboard view complated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" style="min-height: 90px !important; padding: 10px;">
+<mat-toolbar class="navbar" color="primary" style="min-height: 90px !important; padding: 10px;">
   <mat-toolbar-row>
     <mat-icon class="example-icon" aria-hidden="false">shopping_cart</mat-icon>
     <span style="font-weight: bolder"> Shopify</span>
