--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row wrap" fxLayoutAlign="center center">
-    <mat-card fxFlex="100" >
+    <mat-card class="Login_Form" fxFlex="100" >
         <mat-card-header fxLayoutAlign="center center" >
             <mat-card-title>
                 <h3 style="color: rgb(22, 3, 189)">Login</h3>
