--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="noOrder()" style="margin: 200px; color: rgb(37, 1, 194);;">
         <h1>No orders received yet!!</h1>
     </div>
-    <mat-card class="item" fxFlex="0 1 calc(25% - 32px)"
+    <mat-card class="item" fxFlex="0 1 calc(20% - 32px)"
         *ngFor="let test of tests | paginate: { itemsPerPage: count, currentPage: p }">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
@@ -15,11 +15,11 @@
         <img class="image" mat-card-image src="https://htmlemail.io/img/blog-shopify.jpg" alt="Photo of a Shiba Inu">
            
             <mat-card-content>
-                <p>NAME: {{test.name}}</p>
-                <p>GENDER: {{test.gender}}</p>
-                <p>PHONENO: {{test.phoneno}}</p>
-                <p>EMAIL: {{test.email}}</p>
-                <p>NATIONALITY: {{test.nationality}}</p>
+                <div>NAME: {{test.name}}</div>
+                <div>GENDER: {{test.gender}}</div>
+                <div>PHONENO: {{test.phoneno}}</div>
+                <div>EMAIL: {{test.email}}</div>
+                <div>NATIONALITY: {{test.nationality}}</div>
             </mat-card-content>
             <mat-card-actions fxLayoutAlign="center center">
                 <button mat-raised-button (click)="order()">View Order Details</button>
