--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,30 +1,44 @@
 <p style="margin-top: 150px;"></p>
-<mat-card style="margin: 30px;">
+<mat-card style="margin: 30px;" *ngFor="let order of orders">
   <div gdAreas="header header | side content | footer footer" gdGap="16px" gdRows="auto auto auto">
     <div gdArea="header">
-      <h1 style="color: rgb(107, 106, 106);"> Order #1</h1>
-
+      <h1 style="color: rgb(107, 106, 106); margin-left: 30px;"> Order #{{order.order_number}}</h1>
     </div>
     <div gdArea="side">
       <mat-card>
         <h3 style="color: rgb(3, 3, 223);">Products</h3>
-        <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;" *ngFor="let item of items">
-
-          <div>Id: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.product_id}}</span>  </div>
+        <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;" *ngFor="let item of order['line_items']">
+          <div>Id: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.id}}</span>  </div>
           <div>Title: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.title}}</span>  </div>
           <div>Quantity:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.quantity}}</span>  </div>
-          <div>Price:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.price_set.shop_money.amount}} {{item.price_set.shop_money.currency_code}}</span>  </div>
-         <div>Discount: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.total_discount_set.shop_money.amount}} {{item.total_discount_set.shop_money.currency_code}}</span>  </div>
+          <div>Price:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{order.line_items[0].price_set.shop_money.amount}} {{order.line_items[0].price_set.shop_money.currency_code}}</span>  </div>
+          <div>Discount: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.total_discount_set.shop_money.amount}} {{item.total_discount_set.shop_money.currency_code}}</span>  </div>
           <mat-divider style="margin-top: 20px; margin-bottom: 20px;" [inset]="true"></mat-divider>
         </div>
         <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;">Total Amount: 
-          <span style="margin-left: 10px; color: black;font-weight: normal;"> 10000</span>
+          <span style="margin-left: 10px; color: black;font-weight: normal;"> {{order.total_price_set.shop_money.amount}} {{order.total_price_set.shop_money.currency_code}}</span>
         </div>
         <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;">Total Discounts: 
-          <span style="margin-left: 10px; color: black;font-weight: normal;"> 10000</span>
+          <span style="margin-left: 10px; color: black;font-weight: normal;"> {{order.total_discount_set.shop_money.amount}} {{order.total_discount_set.shop_money.currency_code}}</span>
+        </div>
+        <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;">Total Tax: 
+          <span style="margin-left: 10px; color: black;font-weight: normal;"> {{order.total_tax_set.shop_money.amount}} {{order.total_tax_set.shop_money.currency_code}}</span>
         </div>
 
 
+      </mat-card>
+      <br><br>
+      <mat-card>
+        <h3 style="color: rgb(3, 3, 223);">Shipping Lines</h3>
+        <div style="font-weight: bold;font-size: 15px; color: darkgray; padding: 2px;" *ngFor="let item of order['shipping_lines']">
+          <div>Title: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.title}}</span>  </div>
+          <div>Source:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.source}}</span>  </div>
+          <div>Price:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.price_set.shop_money.amount}} {{item.price_set.shop_money.currency_code}}</span>  </div>
+         <div>Discount: <span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.discounted_price_set.shop_money.amount}} {{item.discounted_price_set.shop_money.currency_code}}</span>  </div>
+         <div>Phone:<span style="margin-left: 10px; color: black;font-weight: normal;"> {{item.phone}}</span>  </div>
+
+         <mat-divider style="margin-top: 20px; margin-bottom: 20px;" [inset]="true"></mat-divider>
+        </div>
       </mat-card>
 
     </div>
@@ -36,19 +50,20 @@
           <div>
             <div >
               <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false" >account_box</mat-icon>
-
               {{customer.first_name}} {{customer.last_name}}
             </div>
             <div>
               <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false" >mail</mat-icon>
-              <span (keyup)="changeValue(id, 'email', $event)" (blur)="updateList('email', $event)"
+              <span  (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(customer._id,'email', $event)"
               contenteditable="true">{{customer.email}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false" >create</mat-icon></div>
             <div>
               <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false" >phone_android</mat-icon>
 
-              <span (keyup)="changeValue(id, 'phone', $event)" (blur)="updateList( 'phone', $event)"
-                contenteditable="true">{{customer.phone}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <span *ngIf="customer.phone != null" (keyup)="changeValue(id, 'phone', $event)" (blur)="updateList(customer._id, 'phone', $event)"
+                contenteditable="true">{{customer.phone }}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <span  *ngIf="customer.phone == null"  (keyup)="changeValue(id, 'phone', $event)" (blur)="updateList(customer._id, 'phone', $event)"
+                contenteditable="true">--</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false">create</mat-icon>
             </div>
           </div>
@@ -72,21 +87,21 @@
         <div fxLayout="row wrap" fxLayout.xs="row wrap" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
           <div fxLayout="column" fxFlex="0 1 calc(50% - 32px)" fxLayoutAlign="start start">
             <p style="font-weight: bold;font-size: 17px; color: darkgray; padding: 2px;">Billing Address</p>
-              <div style="font-weight: bold;font-size: 16px; color: rgb(80, 77, 77)">{{billing_address.first_name}} {{billing_address.last_name}}</div>
-              <div>{{billing_address.address1}},</div>
-              <div>{{billing_address.city}}, {{billing_address.province}},</div>
-              <div>{{billing_address.country}}</div>
-              <div>{{billing_address.zip}}</div>
+              <div style="font-weight: bold;font-size: 16px; color: rgb(80, 77, 77)">{{order.billing_address.first_name}} {{order.billing_address.last_name}}</div>
+              <div>{{order.billing_address.address1}},</div>
+              <div>{{order.billing_address.city}}, {{order.billing_address.province}},</div>
+              <div>{{order.billing_address.country}}</div>
+              <div>{{order.billing_address.zip}}</div>
           </div>
           <mat-divider [vertical]="true"></mat-divider>
 
           <div fxLayout="column" fxFlex="0 1 calc(50% - 32px)" fxLayoutAlign="start start">
             <p style="font-weight: bold;font-size: 17px; color: darkgray; padding: 2px;">Shipping Address</p>
-              <div style="font-weight: bold;font-size: 16px; color: rgb(75, 73, 73)">{{shipping_address.first_name}} {{shipping_address.last_name}}</div>
-              <div>{{shipping_address.address1}},</div>
-              <div>{{shipping_address.city}}, {{shipping_address.province}},</div>
-              <div>{{shipping_address.country}}</div>
-              <div>{{shipping_address.zip}}</div>
+              <div style="font-weight: bold;font-size: 16px; color: rgb(75, 73, 73)">{{order.shipping_address.first_name}} {{order.shipping_address.last_name}}</div>
+              <div>{{order.shipping_address.address1}},</div>
+              <div>{{order.shipping_address.city}}, {{order.shipping_address.province}},</div>
+              <div>{{order.shipping_address.country}}</div>
+              <div>{{order.shipping_address.zip}}</div>
           </div>
         </div>
       </mat-card>
