--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="Login_Form" fxFlex="100" >
         <mat-card-header fxLayoutAlign="center center" >
             <mat-card-title>
-                <h3 style="color: rgb(22, 3, 189)">Login</h3>
+                <h3>Login</h3>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content fxLayout="column">
@@ -16,7 +16,7 @@
 
             <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
       
-        <mat-card-actions style="max-width: 40%;" fxLayout="column" fxLayoutAlign="center center">
+        <mat-card-actions fxLayout="column" fxLayoutAlign="center center">
             <button  mat-raised-button color="primary" (click)="login()">Continue <mat-icon>arrow_forward</mat-icon></button>
         </mat-card-actions>
     </mat-card-content>
