--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="Login_Form" fxFlex="100" >
         <mat-card-header fxLayoutAlign="center center" >
             <mat-card-title>
-                <h3>Login</h3>
+                <h3 style="color: rgb(22, 3, 189)">Login</h3>
             </mat-card-title>
         </mat-card-header>
         <mat-card-content fxLayout="column">
