--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,11 +4,11 @@
     <mat-card fxFlex="0 1 80%" *ngFor="let order of orders">
       <div gdAreas="header header | side content | footer footer" gdGap="16px" gdRows="auto auto auto">
         <div gdArea="header">
-          <h1> Order #{{order.order_number}}</h1>
+          <h1 style="color: rgb(107, 106, 106); margin-left: 30px;"> Order #{{order.order_number}}</h1>
         </div>
         <div gdArea="side">
           <mat-card>
-            <h3>Products</h3>
+            <h3 style="color: rgb(22, 3, 189)">Products</h3>
             <div class="heading" *ngFor="let item of order['line_items']">
               <div>Id: <span class="des"> {{item.id}}</span> </div>
               <div>Title: <span class="des"> {{item.title}}</span>
@@ -39,7 +39,7 @@
           </mat-card>
           <br><br>
           <mat-card>
-            <h3>Shipping Lines</h3>
+            <h3  style="color: rgb(22, 3, 189)">Shipping Lines</h3>
             <div class="heading" *ngFor="let item of order['shipping_lines']">
               <div>Title: <span class="des"> {{item.title}}</span>
               </div>
@@ -58,31 +58,30 @@
         </div>
         <div gdArea="content">
           <mat-card>
-            <h3>Customer Information</h3>
+            <h3  style="color: rgb(22, 3, 189)">Customer Information</h3>
             <div>
-              <div style="font-size: 15px;">
-                <mat-icon class="example-icon" aria-hidden="false">account_box</mat-icon>
-                {{customer.first_name}} {{customer.last_name}}
+              <div style="margin-top: 10px; margin-bottom: 10px;">
+                <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false" >account_box</mat-icon>{{customer.first_name}} {{customer.last_name}}
               </div>
-              <div>
-                <mat-icon class="example-icon" aria-hidden="false">mail</mat-icon>
+              <div style="margin-top: 10px; margin-bottom: 10px;">
+                <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false">mail</mat-icon>
                 <span (keyup)="changeValue(id, 'email', $event)" (blur)="updateList(customer._id,'email', $event)"
                   contenteditable="true">{{customer.email}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <mat-icon class="example-icon" aria-hidden="false">create</mat-icon>
+                <mat-icon style=" font-size: 15px;" aria-hidden="false">create</mat-icon>
               </div>
-              <div>
-                <mat-icon class="example-icon" aria-hidden="false">phone_android</mat-icon>
+              <div style="margin-top: 10px; margin-bottom: 10px;">
+                <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false">phone_android</mat-icon>
                 <span *ngIf="customer.phone != null" (keyup)="changeValue(id, 'phone', $event)"
                   (blur)="updateList(customer._id, 'phone', $event)"
                   contenteditable="true">{{customer.phone }}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <span *ngIf="customer.phone == null" (keyup)="changeValue(id, 'phone', $event)"
                   (blur)="updateList(customer._id, 'phone', $event)"
                   contenteditable="true">--</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <mat-icon class="example-icon" aria-hidden="false">create</mat-icon>
+                <mat-icon style=" font-size: 15px;"class="example-icon" aria-hidden="false">create</mat-icon>
               </div>
             </div>
-            <div>
-              <mat-icon class="example-icon" aria-hidden="false">home</mat-icon>
+            <div style="margin-top: 10px;">
+              <mat-icon style=" font-size: 15px;" class="example-icon" aria-hidden="false">home</mat-icon>
               address-1: {{customer.default_address.address1}}
             </div>
             <div style="margin-left: 28px;">address-2: {{customer.default_address.address2}} </div>
@@ -93,13 +92,12 @@
           </mat-card>
           <br><br>
           <mat-card>
-            <h3>Address Details</h3>
+            <h3  style="color: rgb(22, 3, 189)">Address Details</h3>
             <div fxLayout="row wrap" fxLayout.xs="row wrap" fxLayoutAlign="center" fxLayoutGap="10px"
               fxLayoutGap.xs="0">
               <div fxLayout="column" fxFlex="0 1 calc(50% - 32px)" fxLayoutAlign="start start">
                 <p class="heading">Billing Address</p>
-                <div class="des">
-                  {{order.billing_address.first_name}} {{order.billing_address.last_name}}</div>
+                <div style="font-weight: bold;">{{order.billing_address.first_name}} {{order.billing_address.last_name}}</div>
                 <div>{{order.billing_address.address1}},</div>
                 <div>{{order.billing_address.city}}, {{order.billing_address.province}},</div>
                 <div>{{order.billing_address.country}}</div>
@@ -108,8 +106,7 @@
               <mat-divider [vertical]="true"></mat-divider>
               <div fxLayout="column" fxFlex="0 1 calc(50% - 32px)" fxLayoutAlign="start start">
                 <p class="heading">Shipping Address</p>
-                <div class="des">
-                  {{order.shipping_address.first_name}} {{order.shipping_address.last_name}}</div>
+                <div style="font-weight: bold;">{{order.shipping_address.first_name}} {{order.shipping_address.last_name}}</div>
                 <div>{{order.shipping_address.address1}},</div>
                 <div>{{order.shipping_address.city}}, {{order.shipping_address.province}},</div>
                 <div>{{order.shipping_address.country}}</div>
